--- a/build.gradle
+++ b/build.gradle
@@ -54,4 +54,5 @@ compileJava {
     dependsOn updateLabymodApi
     sourceCompatibility = '1.8'
     targetCompatibility = '1.8'
+    options.encoding = 'UTF-8'
 }
